# edgarkit

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  download_filings.rs  index_operations.rs  rss_feeds.rs  search_filings.rs
examples/investment-adviser/: Cargo.toml  README.md
examples/investment-adviser/src/: main.rs
examples/ipo-scanner/: Cargo.toml  README.md
examples/ipo-scanner/src/: main.rs
src/: company.rs  config.rs  core.rs  error.rs  feeds.rs  filings.rs  index.rs  lib.rs  options.rs  search.rs  traits.rs
src/parsing/: atom.rs  index.rs  mod.rs  rss.rs  utils.rs
tests/: atom_parser_fixtures.rs  company_fixtures.rs  feeds_fixtures.rs  filings_fixtures.rs  index_fixtures.rs  index_parser_fixtures.rs  live_company.rs  live_core.rs  live_feeds.rs  live_filings.rs  live_index.rs  live_search.rs  rss_parser_fixtures.rs  search_fixtures.rs
tests/common/: mod.rs
tests/fixtures/atom/: atom.xml  atom1.xml
tests/fixtures/index/: daily-index-2023.json  daily-index-qtr.json  daily-index.json  full-index-2021.json  full-index-qtr.json  full-index.json
tests/fixtures/rss/: pressreleases.rss  testimony.rss  usgaap.rss
tests/fixtures/search/: search-index.json  search-s-1.json
tests/fixtures/submissions/: directory-full.json  directory.json  submission.json  submission1.json
tests/fixtures/tickers/: company_tickers_mf.json  companyconcept.json  companyfacts.json  frames.json
