[package]
name = "edgarkit"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Monin <moninsergei@gmail.com>"]
license = "MIT"
description = "A comprehensive Rust client for the SEC EDGAR system"
repository = "https://github.com/r007/edgarkit"
documentation = "https://docs.rs/edgarkit"
keywords = ["sec", "edgar", "finance", "filings", "api"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[features]
default = ["search", "filings", "company", "feeds", "index"]
search = ["dep:serde_urlencoded", "dep:futures"]
filings = ["dep:flate2", "dep:chrono"]
company = ["dep:chrono"]
feeds = ["atom", "rss"]
atom = ["dep:quick-xml"]
rss = ["dep:quick-xml"]
index = ["dep:flate2", "dep:chrono", "dep:regex"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }

# HTTP & Async
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true, optional = true }
governor = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
fastrand = { workspace = true }
flate2 = { workspace = true, optional = true }