[package]
name = "edgarkit"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Monin <moninsergei@gmail.com>"]
license = "MIT"
description = "An unofficial Rust client for the SEC EDGAR system"
repository = "https://github.com/r007/edgarkit"
documentation = "https://docs.rs/edgarkit"
keywords = ["sec", "edgar", "finance", "filings", "api"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[features]
default = ["search", "filings", "company", "feeds", "index"]
search = ["dep:serde_urlencoded", "dep:futures"]
filings = ["dep:flate2", "dep:chrono"]
company = ["dep:chrono"]
feeds = ["atom", "rss"]
atom = ["dep:quick-xml"]
rss = ["dep:quick-xml"]
index = ["dep:flate2", "dep:chrono", "dep:regex"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = { version = "0.7.1", optional = true }
quick-xml = { version = "0.37.5", features = ["serialize", "serde"], optional = true }

# HTTP & Async
reqwest = { version = "0.12.26", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"
futures = { version = "0.3.31", optional = true }
governor = "0.8.1"

# Error handling
thiserror = "2.0.17"
tracing = "0.1.43"

# Utilities
regex = { version = "1.12.2", optional = true }
chrono = { version = "0.4.42", optional = true }
fastrand = "2.3.0"
flate2 = { version = "1.1.5", optional = true }
