[package]
name = "ipo-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
edgarkit = { path = "../.." }

anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[workspace]
